// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"favicon" option 1`] = `""Build Info" has not been initialized yet"`;

exports[`"favicon" option 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            <link rel="shortcut icon" href="/favicon.ico">
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBpmFzyzzR1PBUaiLsgpu2NHD6qIeBy+8m9Uwh2qPhPl5dqraHvdasjvg4ljMsqyIAJsUcHuR3mSbcwfxAlIGLmWpQJ3zsX7zkwbR5B44BoZQNVCKVnjAI5SVP4sA20EKLosR2pTrPD/VgFYw7v8C/11sJ/+t3Xfv2bKv3Jw5/dX3Iah0MfS/YXrbxQ3dY9Z2wCNOUY7JC+u76UM1C0X8pFdBMfQQMYO1+KECIxoUo8To+QTop6//Vkb27IfQRs5qXUUDpOl9QIAYeR/7o2raXUQ==">
          </head>
          <body>
            
            <div id="react-view"></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`"favicon" option 3`] = `200`;

exports[`Base rendering of HTML template 1`] = `""Build Info" has not been initialized yet"`;

exports[`Base rendering of HTML template 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBpmFzyzzR1PBUaiLsgpu2NHD6qIeBy+8m9Uwh2qPhPl5dqraHvdasjvg4ljMsqyIAJsUcHuR3mSbcwfxAlIGLmWpQJ3zsX7zkwbR5B44BoZQNVCKVnjAI5SVP4sA20EKLosR2pTrPD/VgFYw7v8C/11sJ/+t3Xfv2bKv3Jw5/dX3Iah0MfS/YXrbxQ3dY9Z2wCNOUY7JC+u76UM1C0X8pFdBMfQQMYO1+KECIxoUo8To+QTop6//Vkb27IfQRs5qXUUDpOl9QIAYeR/7o2raXUQ==">
          </head>
          <body>
            
            <div id="react-view"></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`Base rendering of HTML template 3`] = `200`;

exports[`Config overriding for injection 1`] = `""Build Info" has not been initialized yet"`;

exports[`Config overriding for injection 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBpmFzyzzR1PBUaiLsgpu2NHD6qIeBy+8m9Uwh2qPhPl5dqraHvdasjvg4ljMsqyIAJsUcHuR3mSbcwfxAlIGLmWpQJ3zsX7zkwbR5B44BoZQNVCKVnjAI5SVP4sA20EKLosR2pTrPD/VgFYw7v8C/11sJ/+t3Xfv2bKv3Jw5/dX3Iah0MfS/YXrbxQ3dY9Z2wCNOUY7JC+u76UM1C0X8pFdBMfQQMYO1+KECIxoUo8Toleya/2D9eiR6ItYfGU/13TZ6LvSSaWuNfjodFbPd8BHnTQvNYJv1XfU8ebPRS1svcbb3Nv5ksgK29ZRZwQeA/">
          </head>
          <body>
            
            <div id="react-view"></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`Config overriding for injection 3`] = `200`;

exports[`Helmet integration works 1`] = `""Build Info" has not been initialized yet"`;

exports[`Helmet integration works 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true">Test Page Title</title>
            <meta data-rh="true" content="Test Page Description" property="description"/>
            <meta name="theme-color" content="#FFFFFF">
            
            <link data-rh="true" href="https://github.com/birdofpreyru/react-utils" rel="canonical"/><link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBpmFzyzzR1PBUaiLsgpu2NHD6qIeBy+8m9Uwh2qPhPl5dqraHvdasjvg4ljMsqyIAJsUcHuR3mSbcwfxAlIGLmWpQJ3zsX7zkwbR5B44BoZQNVCKVnjAI5SVP4sA20EKLosR2pTrPD/VgFYw7v8C/11sJ/+t3Xfv2bKv3Jw5/dX3Iah0MfS/YXrbxQ3dY9Z2wCNOUY7JC+u76UM1C0X8pFdBMfQQMYO1+KECIxoUo8To+QTop6//Vkb27IfQRs5qXUUDpOl9QIAYeR/7o2raXUQ==">
          </head>
          <body>
            
            <div id="react-view"><div><p>Hello World!</p><p>Goodbye World!</p></div></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`Helmet integration works 3`] = `200`;

exports[`Injection of additional JS scripts 1`] = `""Build Info" has not been initialized yet"`;

exports[`Injection of additional JS scripts 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            <script>1-st script after opening <head></script><script>2-nd script after opening <head></script>
            
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBpmFzyzzR1PBUaiLsgpu2NHD6qIeBy+8m9Uwh2qPhPl5dqraHvdasjvg4ljMsqyIAJsUcHuR3mSbcwfxAlIGLmWpQJ3zsX7zkwbR5B44BoZQNVCKVnjAI5SVP4sA20EKLosR2pTrPD/VgFYw7v8C/11sJ/+t3Xfv2bKv3Jw5/dX3Iah0MfS/YXrbxQ3dY9Z2wCNOUY7JC+u76UM1C0X8pFdBMfQQMYO1+KECIxoUo8To+QTop6//Vkb27IfQRs5qXUUDpOl9QIAYeR/7o2raXUQ==">
          </head>
          <body>
            <script>1-st script after opening <body></script><script>2-nd script after opening <body></script>
            <div id="react-view"></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            <script>Dummy JS Sript</script><script>Another Dummy JS Script</script><script>Yet another Dummy JS Script</script>
          </body>
        </html>"
`;

exports[`Injection of additional JS scripts 3`] = `200`;

exports[`JS constructs in global state 1`] = `""Build Info" has not been initialized yet"`;

exports[`JS constructs in global state 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true"></title>
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBpmFzyzzR1PBUaiLsgpu2NHD6qIeBy+8m9Uwh2qPhPl5dqraHvdasjvg4ljMsqyIAJsUcHuR3mSbcwfxAlIGLmWpQJ3zsX7zkwbR5B44BoZQNVCKVnjAI5SVP4sA20EKLosR2pTrPD/VgFYw7v8C/11sJ/+t3Xfv2bKv3Jw5/dX3Iah0MfS/YXrbxQ3dY9Z2wCNOUY7JC+u76UM1C0X8pFdBMfQQMYO1+KECIxoUo8Tqq10f7lErRnBESs0h12i02gDganouv6M6IfBtg8n74l3DbPPOMopUHMfdKRYfL+58VyNVVtheb7dn+AZGjDd6+a1XW7HLSDn6XdMN8i0YcNSy4xtYgbQddl6hmSXkV39lDE+blAfxW1YVk0irHJZ57">
          </head>
          <body>
            
            <div id="react-view"><div>{&quot;test&quot;:Array.prototype.slice.call({&quot;1&quot;:&quot;defaultValue&quot;,&quot;length&quot;:2}),&quot;set&quot;:new Set([1,2])}</div></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`JS constructs in global state 3`] = `200`;

exports[`Server-side rendering (SSR); injection of CSS chunks & Redux state 1`] = `""Build Info" has not been initialized yet"`;

exports[`Server-side rendering (SSR); injection of CSS chunks & Redux state 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true"></title>
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet"><link href="/test/public/path/test-chunk-a-1511941200000.css" rel="stylesheet"><link href="/test/public/path/test-chunk-b-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBpmFzyzzR1PBUaiLsgpu2NHD6qIeBy+8m9Uwh2qPhPl5dqraHvdasjvg4ljMsqyIAJsUcHuR3mSbcwfxAlIGLmWpQJ3zsX7zkwbR5B44BoZQNVCKVnjAI5SVP4sA20EKLosR2pTrPD/VgFYw7v8C/11sJ/+t3Xfv2bKv3Jw5/dX3Iah0MfS/YXrbxQ3dY9Z2wCNOUY7JC+u76UM1C0X8pFdBMfQQMYO1+KECIxoUo8TpNf8laRViqoxRNKquYCI/EsGNTVybE2N/Iyevp1l3bOrAZipnfd6hR0/Et+AxThYRbf7mqq9FEXz2YMS81P8aFZ1NrQcQfwpRidDpnABIVCw==">
          </head>
          <body>
            
            <div id="react-view"><div>Hello Wold!</div></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script><script src="/test/public/path/test-chunk-b-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`Server-side rendering (SSR); injection of CSS chunks & Redux state 3`] = `200`;

exports[`Setting of response HTTP status the server-side rendering 1`] = `""Build Info" has not been initialized yet"`;

exports[`Setting of response HTTP status the server-side rendering 2`] = `
"<!DOCTYPE html>
        <html lang="en">
          <head>
            
            <title data-rh="true"></title>
            
            <meta name="theme-color" content="#FFFFFF">
            
            <link href="/test/public/path/main-1511941200000.css" rel="stylesheet">
            
            <meta charset="utf-8">
            <meta
              content="width=device-width,initial-scale=1.0"
              name="viewport"
            >
            <meta itemprop="drpruinj" content="MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBpmFzyzzR1PBUaiLsgpu2NHD6qIeBy+8m9Uwh2qPhPl5dqraHvdasjvg4ljMsqyIAJsUcHuR3mSbcwfxAlIGLmWpQJ3zsX7zkwbR5B44BoZQNVCKVnjAI5SVP4sA20EKLosR2pTrPD/VgFYw7v8C/11sJ/+t3Xfv2bKv3Jw5/dX3Iah0MfS/YXrbxQ3dY9Z2wCNOUY7JC+u76UM1C0X8pFdBMfQQMYO1+KECIxoUo8To+QTop6//Vkb27IfQRs5qXUUDpOl9QIAYeR/7o2raXUQ==">
          </head>
          <body>
            
            <div id="react-view"><div>404 Error Test</div></div>
            <script src="/test/public/path/main-1511941200000.js" type="application/javascript"></script>
            
          </body>
        </html>"
`;

exports[`Setting of response HTTP status the server-side rendering 3`] = `404`;

exports[`Throws in case of forge.random.getBytes(..) failure 1`] = `""Build Info" has not been initialized yet"`;

exports[`Throws in case of forge.random.getBytes(..) failure 2`] = `[Error: Emulated Failure of forge.random.getBytes(..)]`;

exports[`Throws in case of forge.random.getBytes(..) failure 3`] = `""`;

exports[`Throws in case of forge.random.getBytes(..) failure 4`] = `200`;
